@@ -1750,36 +1750,40 @@ if ( ! class_exists( 'Appointments' ) ) {
 		}
 
 		/**
-	 * Load style and script only when they are necessary
-	 * http://beerpla.net/2010/01/13/wordpress-plugin-development-how-to-include-css-and-javascript-conditionally-and-only-when-needed-by-the-posts/
-	 */
+		 * Load style and script only when they are necessary
+		 * http://beerpla.net/2010/01/13/wordpress-plugin-development-how-to-include-css-and-javascript-conditionally-and-only-when-needed-by-the-posts/
+		 */
 		function load_styles( $posts ) {
-			if ( empty( $posts ) || is_admin() ) {
-				return $posts; }
-			
-
-			// check for shortcodes only if "Always load scripts" option is disabled		
-			$options = appointments_get_options();
-			if ( 'yes' !== $options['always_load_scripts'] ) {	
-
+			if ( is_admin() ) {
+				return $posts;
+			}
+			/**
+			 * check always option
+			 *
+			 * @since 2.3.1
+			 */
+			$always_load_scripts = appointments_get_option( 'always_load_scripts' );
+			if ( 'yes' === $always_load_scripts ) {
+				$this->load_scripts_styles( );
+				return $posts;
+			}
+			/**
+			 * No posts - do not check!
+			 */
+			if ( empty( $posts ) ) {
+				return $posts;
+			}
+			// check for shortcodes only if "Always load scripts" option is disabled
 				$this->shortcode_found = false; // use this flag to see if styles and scripts need to be enqueued
-				foreach ( $posts as $post ) {
-					if ( is_object( $post ) && stripos( $post->post_content, '[app_' ) !== false ) {
-						$this->shortcode_found = true;
-
-						do_action( 'app-shortcodes-shortcode_found', $post );
-					}
+			foreach ( $posts as $post ) {
+				if ( is_object( $post ) && stripos( $post->post_content, '[app_' ) !== false ) {
+					$this->shortcode_found = true;
+					do_action( 'app-shortcodes-shortcode_found', $post );
 				}
-				
-				if ( $this->shortcode_found ) {
-					$this->load_scripts_styles( ); 
-				}
-				
 			}
-			else {
-				$this->load_scripts_styles( ); 
+			if ( $this->shortcode_found ) {
+				$this->load_scripts_styles( );
 			}
-			
 			return $posts;
 		}
 
